--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- 独自のCSSファイルを読み込み -->
+    <link rel="stylesheet" href="./style.css" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
-    
   </head>
+
   <body>
-    
-<div class="side_ber">
-    <aside>
-      <header>
-        <a href="#" data-tab="home"><span class="ri-home-line">HOME</span></a>
-      </header>
-    </aside>
-</div>
-
-<main>
-      <section id="home">
-        <header class="main_header">
-          <div class="main_content">
-            <span class="ri-user-smile-line"></span>
-            <h1>Welcome to Your Personal Dashboard</h1>
-            <p>Make your daily life more convenient and enjoyable</p>
-          </div>
-        </header>
-
-        <div class="messeg">
-          <h1>This dashboard is a tool to enrich your daily life. You can easily use essential features such as diary entries, memo management, and checking weather information.</h1>
-          <h1>Small daily records become irreplaceable memories, and efficient task management leads to fulfilling days. Please use this as a partner that supports your everyday life.</h1>
+    <div class="dashboard-container">
+      <!-- 左サイドバー (固定) -->
+      <aside class="sidebar">
+        <div class="sidebar-header">
+          <a href="#" class="sidebar-home" data-tab="home">
+            <span class="ri-home-line"></span>
+            <span>Home</span>
+          </a>
         </div>
+  
+        <!-- サイドバーにメニューを追加してください -->
+  
+      </aside>
 
+      <!-- 右メインコンテンツ (スクロール可) -->
+      <main class="main-content">
+        <!-- ホームセクション -->
+        <section class="content-section" id="home">
+          <header class="section-header">
+            <div class="profile-circle">
+              <span class="ri-user-smile-line"></span>
+            </div>
+            <h1 class="section-title">Welcome to Your Personal Dashboard</h1>
+            <p class="section-subtitle">
+              Make your daily life more convenient and enjoyable
+            </p>
+          </header>
+          <div class="section-body">
+            <div class="section-description">
+              <p>
+                This dashboard is a tool to enrich your daily life. You can easily use essential features such as diary entries, memo management, and checking weather information.
+              </p>
+              <p>
+                Small daily records become irreplaceable memories, and efficient task management leads to fulfilling days. Please use this as a partner that supports your everyday life.
+              </p>
+            </div>
 
-      </section>
-</main>
+          </div>
+        </section>
+        <!-- End ホームセクション -->
 
-
-
+      </main>
+    </div>
   </body>
 </html>
